#42: Fixed code formatting when copied, more visible hint about the fact that code could be copied, added changelog

--- a/assets/main.css
+++ b/assets/main.css
@@ -80,6 +80,14 @@ body {
     background: transparent;
 }
 
+.default-view .modal-dialog .modal-copy-hint {
+    margin-right: 10px;
+}
+
+.default-view .modal-dialog .modal-copy-hint kbd {
+    margin: 0 2px;
+}
+
 .default-view-files table .action {
     width: 100px;
 }
